# time-index-func

./: .gitignore  README.md  pyproject.toml  time_index_func.py
time_index/: time_index_func.py
time_index_func/: __init__.py
